<resources>
    <string name="app_name">Who wants to be a millionaire</string>
    <string name="tvplay">Play</string>
    <string name="tvscores">Scores</string>
    <string name="tvsettings">Settings</string>
    <string name="about">Who wants to be a millionaire\n\n Guillermo Montilla\n guimonto@inf.upv.es\n\n Emilio Miguel\n emmigme@inf.upv.es\n\n 2018</string>
    <string name="name">Name: </string>
    <string name="help_settings">How many times can you ask for help?</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_friends_name">Enter your friends name</string>
    <string name="add_friend">Add friend</string>
    <string name="label_information">Information</string>
    <string name="zero_help" translatable="false">0</string>
    <string name="one_help" translatable="false">1</string>
    <string name="two_help" translatable="false">2</string>
    <string name="three_help" translatable="false">3</string>
    <string name="play_for">Play for:</string>
    <string name="qt">Question:</string>
    <string name="delete_score">Are you sure you want to delete the score?</string>
    <string name="score_local" translatable="false">Local</string>
    <string name="score_friends">Friends</string>
    <string name="price0" translatable="false">0$</string>
    <string name="price100" translatable="false">100$</string>
    <string name="price200" translatable="false">200$</string>
    <string name="price300" translatable="false">300$</string>
    <string name="price500" translatable="false">500$</string>
    <string name="price1000" translatable="false">1000$</string>
    <string name="price2000" translatable="false">2000$</string>
    <string name="price4000" translatable="false">4000$</string>
    <string name="price8000" translatable="false">8000$</string>
    <string name="price16000" translatable="false">16000$</string>
    <string name="price32000" translatable="false">32000$</string>
    <string name="price64000" translatable="false">64000$</string>
    <string name="price125000" translatable="false">125000$</string>
    <string name="price250000" translatable="false">250000$</string>
    <string name="price500000" translatable="false">500000$</string>
    <string name="price1000000" translatable="false">1000000$</string>
    <string name="end_game">Congratulations, you win! </string>
    <string name="surrender">Are you sure you want to retire? </string>
    <string name="looser">You loose...</string>
    <string name="preference_name_summary">Name that identifies the user</string>
    <string name="preference_name">User name</string>
    <string name="jokers" translatable="false">Comodines</string>
    <string name="title_activity_settings">Settings</string>
    <string name="number_jokers">Number of jokers</string>
    <string name="jokers_summary">Select the number of jokers which you want to play</string>
    <string name="friends">Friends</string>
    <string name="language">Language</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="select_language">Select your language</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general" translatable="false">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>

    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
</resources>
